# CS499-Bioinformatics

./: .gitignore  CMakeLists.txt  Doxyfile  Driver.hpp  README.md
include/: Driver.hpp  FASTA.hpp  Levenshtein.hpp  Rank.hpp  Sequence.hpp  SorensenDice.hpp  Types.hpp
lib/googletest/make/: Makefile
src/: Driver.cpp
test/: ReadMe.txt  TestBenchmark.cpp  TestFASTA.cpp  TestLevenshtein.cpp  TestSequence.cpp  TestSorensen.cpp
test/data/: Random.fasta
